--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 
+
 body {
     background-image: url(/public/pink-synthwave-outrun-gfxvs6l5faewfznd.jpg);
     color: azure;
@@ -6,8 +7,98 @@ body {
     font-size: 1.5rem;
 }
 
-h1 {
+.title {
     text-align: center;
 
 }
 
+.search {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 40px;
+}
+
+form {
+    background-color: #4654e1;
+    width: 300px;
+    height: 44px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  
+  input {
+    all: unset;
+    font: 16px system-ui;
+    color: #fff;
+    height: 100%;
+    width: 100%;
+    padding: 6px 10px;
+    
+  }
+
+  ::placeholder {
+    color: #fff;
+    opacity: 0.7; 
+  }
+
+  button {
+    all: unset;
+    cursor: pointer;
+    width: 44px;
+    height: 44px;
+  }
+  
+  svg {
+    color: #fff;
+    fill: currentColor;
+    width: 24px;
+    height: 24px;
+    padding: 10px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-flow: row wrap;
+    height:600px;
+    width: auto;
+  }
+
+ .child-container {
+    flex: 1;
+    justify-content: center;
+    align-content: center;
+    background-color: #353d99bb;
+    height: 100%;
+    width:400px;
+    margin:5%;
+    border-radius: 5%;
+    
+ }
+
+ .child-container:first-child {
+    margin-right: 40px;
+ }
+
+.new-div {
+    margin: 0 auto;
+    height:95%;
+    width:95%;
+    background-color: #252025c4;
+    
+}
+
+.playlist-name {
+    height:10%;
+    width:50%;
+    background-color: #4654e1;
+    margin: 0 auto;
+}
+h3 {
+    text-align: center;
+}
+ 
