--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@ form {
     opacity: 0.7; 
   }
 
-  button {
+  #search-button {
     all: unset;
     cursor: pointer;
     width: 44px;
@@ -93,12 +93,32 @@ form {
 }
 
 .playlist-name {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-content: center;
     height:10%;
-    width:50%;
+    width:75%;
     background-color: #4654e1;
     margin: 0 auto;
 }
 h3 {
     text-align: center;
 }
+
+#save-spotify {
+  background-color: azure;
+  font-size: 1rem;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+#save-spotify:active {
+  border-radius: 15% 15% 0 0;
+  background: #4654e1;
+  color:azure;
+}
+
+
+
  
