--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -13,7 +13,8 @@
 
 .search {
     background: black;
-    width:92%;
+    width:96%;
+    color: azure;
 }
 
 .form {
@@ -25,10 +26,11 @@
 }
 
 .tracklistWrapper {
+    margin-top: 30px;
     display: flex;
-    flex-flow:row wrap;
+    flex-flow:row ;
     align-content: center;
-    margin: 0;
-    padding:0;
+    justify-content: space-between;
+   
     
 }
