--- a/src/Playlist/Playlist.module.css
+++ b/src/Playlist/Playlist.module.css
@@ -1,43 +1,7 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-flow: row wrap;
-    height:600px;
-    width: auto;
-  }
 
- .childcontainer {
-    flex: 1;
-    justify-content: center;
-    align-content: center;
-    background-color: #353d99bb;
-    height: 100%;
-    width:400px;
-    margin:5%;
-    border-radius: 5%;
-    
- }
-
- .child-container:first-child {
-    margin-right: 40px;
- }
- .savespotify {
-    background-color: azure;
-    font-size: 1rem;
-    border: 1px solid black;
-    cursor: pointer;
-  }
-  
-  #save-spotify:active {
-    border-radius: 15% 15% 0 0;
-    background: #4654e1;
-    color:azure;
-  }
-
-  input {
+  .input {
     all: unset;
-    font: 16px system-ui;
+    font: 1.2rem system-ui;
     color: #fff;
     height: 100%;
     width: 100%;
@@ -46,10 +10,12 @@
     
   }
   .newdiv {
+    display: block;
     margin: 0 auto;
     height:95%;
     width:95%;
     background-color: #252025c4;
+    padding: 10px;
     
 }
 .playlist {
