--- a/src/Track/Track.module.css
+++ b/src/Track/Track.module.css
@@ -11,11 +11,12 @@
 }
 
 .SongWrapper {
-    font-size: 1rem;
+    font-size: 0.9rem;
     display: flex;
     justify-content: flex-start;
     align-content: center;
     margin-left: 20px;
+    width:300px;
     
     
 }
@@ -46,6 +47,6 @@
 .trackName {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin-left: 10px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
