added the ability to upload a playlist to spotify, fixed issue with double re-rendering the login page

--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,6 +1,7 @@
 .App {
     display: block;
     
+    
 }
 
 .AppHeader {
@@ -33,4 +34,9 @@
     justify-content: space-between;
    
     
+}
+
+.log {
+    color:aliceblue;
+    background-color: rgba(197, 8, 181, 0.705);
 }
