--- a/src/Playlist/Playlist.module.css
+++ b/src/Playlist/Playlist.module.css
@@ -16,6 +16,7 @@
     width:95%;
     background-color: #252025c4;
     padding: 10px;
+    border: 1px solid black;
     
 }
 .playlist {
@@ -25,7 +26,7 @@
 }
 .saveto {
   margin: 0 auto;
-  background-color: #4654e1;
+  background-color: rgba(197, 8, 181, 0.705);
   color: azure;
   width: 20%;
   height: 30px;
